# staccato

./: .gitignore  LICENSE  README.md  README_zh.md  main.py  pyproject.toml
sessions/: session_20260107_181749.json
staccato/: __init__.py  analyzer.py  app.py  collector.py  constants.py  events.py  key_tracker.py  logger.py  session.py
staccato/styles/: default.tcss
staccato/widgets/: __init__.py  config_screen.py  event_log.py  piano_roll.py  stats_panel.py
